# cubfits

./: .gitignore  ChangeLog  DESCRIPTION  INSTALL  NAMESPACE  README  cleanup  configure  configure.ac
R/: asl.optim.r  asl.probability.r  asl.quantile.r  cai.r  cedric.convergence.r  cedric.io.r  cedric.mapBMatNames.r  cedric.plotting.r  data.codon.convert.r  data.convert.r  data.gen.reu13.df.r  data.gen.reu13.list.r  data.io.r  data.rearrange.r  ds.gen.scuo.r  dsn.dirichlet.r  dsn.logmixture.r  index.cai.r  index.gen.scuo.r  index.scu.r  index.scuo.random.r  logan.plotting.r  mixnorm.optim.r  mixnormerr.optim.r  my.acceptance.r  my.adaptive.DrawScale.r  my.adaptive.r  my.cat.r  my.check.data.r  my.check.rearrange.r  my.coef.r  my.cubappr.r  my.cubfits.r  my.cubpred.r  my.draw.lognormal.hp.MH.r  my.drawBConditionalAll.r  my.drawBConditionalFit.r  my.drawPhiConditionalAll.r  my.drawPhiConditionalAllPred.r  my.dump.r  (+64 more)
data/: b.Init.rda  bInit.rda  control.r  control.rda  control_optim.rda  envir.rda  ex.test.rda  ex.train.rda  global.r  global.rda  plot.r  plot.rda  yassour.mcmc.rda  yassour.rda
demo/: 00Index  appr.roc.r  basic.r  cai.r  fitMultinom.r  mSCU.r  mle.yassour.r  nsef.appr.r  nsef.pred.r  nsef.simu.r  nsef.train.r  plotbin.r  pred.roc.r  roc.appr.r  roc.pred.r  roc.simu.r  roc.train.r  rocnsef.appr.r  rocnsef.pred.r  rocnsef.train.r  scuo.r  simu.roc.r  train.roc.r  yassour.asl.r  yassour.mixed.r  yassour.mixture.r
inst/: CITATION  build_date.txt
man/: 00_cubfits-package.Rd  a1_cubfits.Rd  a2_cubappr.Rd  a3_cubpred.Rd  b0_plotprxy.Rd  b1_plotbin.Rd  (+26 more)
(+369 files in other folders)
