dnl Process this file with autoconf to produce a configure script
AC_INIT
AC_CONFIG_SRCDIR([DESCRIPTION])

dnl Check chmod
chmod +x ./inst/workflow/roc/script/*.sh
# chmod +x ./inst/workflow/nsef/script/*.sh
# chmod +x ./inst/workflow/rocnsef/script/*.sh

dnl Start to substitute templates
AC_CONFIG_FILES([src/Makevars])
AC_OUTPUT
